# etekcity_fit8s_ble

./: LICENSE  README.md  pyproject.toml
.github/: funding.yml
.github/workflows/: ci-cd.yml  publish.yml
src/etekcity_esf551_ble/: __init__.py  _version.py  bluetooth.py  body_metrics.py  const.py  parser.py
src/etekcity_fit8s_ble/: __init__.py  adv_reader.py  body_metrics.py  parser.py
tests/: test_adv_parser.py  test_body_metrics_adv_helper.py  test_parser.py
