[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "etekcity_esf551_ble"
dynamic = ["version"]
authors = [
  { name="Ron", email="ronnnnnnn@gmail.com" },
]
description = "An unofficial Python package for interacting with Etekcity ESF-551 Smart Fitness Scales using BLE. Not affiliated with Etekcity, VeSync Co., Ltd., or any of their subsidiaries."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [
    "etekcity",
    "esf551",
    "smart scale",
    "fitness scale",
    "bluetooth",
    "ble",
    "weight",
    "health",
    "iot",
    "smart home",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bleak",
    "bleak_retry_connector",
]

[tool.hatch.version]
path = "src/etekcity_esf551_ble/_version.py"

[project.urls]
"Homepage" = "https://github.com/ronnnnnnnnnnnnn/etekcity_esf551_ble"
"Bug Tracker" = "https://github.com/ronnnnnnnnnnnnn/etekcity_esf551_ble/issues"
"Documentation" = "https://github.com/ronnnnnnnnnnnnn/etekcity_esf551_ble#readme"
"Source Code" = "https://github.com/ronnnnnnnnnnnnn/etekcity_esf551_ble"

[tool.hatch.build.targets.wheel]
packages = ["src/etekcity_esf551_ble"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]